src/pyflakes/snapshots/ruff__pyflakes__tests__F522_F522.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    StringDotFormatExtraNamedArguments:
      - bar
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 21
  fix:
    location:
      row: 1
      column: 0
    end_location:
      row: 1
      column: 21
    content: "\"{}\".format(1, )"
    message: ~
  parent: ~
- kind:
    StringDotFormatExtraNamedArguments:
      - spam
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 34
  fix:
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 34
    content: "\"{bar}{}\".format(1, bar=2, )"
    message: ~
  parent: ~
- kind:
    StringDotFormatExtraNamedArguments:
      - eggs
      - ham
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 51
  fix:
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 51
    content: "\"{bar:{spam}}\".format(bar=2, spam=3, )"
    message: ~
  parent: ~

