src/pyflakes/snapshots/ruff__pyflakes__tests__F523_F523.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    StringDotFormatExtraPositionalArguments:
      - "1"
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 18
  fix: ~
- kind:
    StringDotFormatExtraPositionalArguments:
      - "0"
      - "2"
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 21
  fix: ~
- kind:
    StringDotFormatExtraPositionalArguments:
      - "2"
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 25
  fix: ~
- kind:
    StringDotFormatExtraPositionalArguments:
      - "1"
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 21
  fix: ~
- kind:
    StringDotFormatExtraPositionalArguments:
      - "1"
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 17
  fix: ~
- kind:
    StringDotFormatExtraPositionalArguments:
      - "1"
      - "2"
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 20
  fix: ~
- kind:
    StringDotFormatExtraPositionalArguments:
      - "2"
  location:
    row: 12
    column: 0
  end_location:
    row: 12
    column: 23
  fix: ~

