src/pyflakes/snapshots/ruff__pyflakes__tests__F541_F541.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind: FStringMissingPlaceholders
  location:
    row: 6
    column: 4
  end_location:
    row: 6
    column: 10
  fix: ~
  parent: ~
- kind: FStringMissingPlaceholders
  location:
    row: 7
    column: 4
  end_location:
    row: 7
    column: 10
  fix: ~
  parent: ~
- kind: FStringMissingPlaceholders
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 10
  fix: ~
  parent: ~
- kind: FStringMissingPlaceholders
  location:
    row: 17
    column: 4
  end_location:
    row: 17
    column: 16
  fix: ~
  parent: ~
- kind: FStringMissingPlaceholders
  location:
    row: 25
    column: 6
  end_location:
    row: 25
    column: 13
  fix: ~
  parent: ~
- kind: FStringMissingPlaceholders
  location:
    row: 26
    column: 3
  end_location:
    row: 26
    column: 6
  fix: ~
  parent: ~

