src/pyflakes/snapshots/ruff__pyflakes__tests__F602_F602.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 5
    column: 4
  end_location:
    row: 5
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 11
    column: 4
  end_location:
    row: 11
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 12
    column: 4
  end_location:
    row: 12
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 12
    column: 4
  end_location:
    row: 12
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 13
    column: 4
  end_location:
    row: 13
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 13
    column: 4
  end_location:
    row: 13
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 13
    column: 4
  end_location:
    row: 13
    column: 5
  fix:
    content: ""
    location:
      row: 12
      column: 8
    end_location:
      row: 13
      column: 8
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 18
    column: 4
  end_location:
    row: 18
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 19
    column: 4
  end_location:
    row: 19
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 19
    column: 4
  end_location:
    row: 19
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 20
    column: 4
  end_location:
    row: 20
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 20
    column: 4
  end_location:
    row: 20
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 20
    column: 4
  end_location:
    row: 20
    column: 5
  fix:
    content: ""
    location:
      row: 20
      column: 4
    end_location:
      row: 21
      column: 4
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 21
    column: 4
  end_location:
    row: 21
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 21
    column: 4
  end_location:
    row: 21
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 21
    column: 4
  end_location:
    row: 21
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 21
    column: 4
  end_location:
    row: 21
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 26
    column: 4
  end_location:
    row: 26
    column: 5
  fix:
    content: ""
    location:
      row: 26
      column: 4
    end_location:
      row: 27
      column: 4
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 27
    column: 4
  end_location:
    row: 27
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 27
    column: 4
  end_location:
    row: 27
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 28
    column: 4
  end_location:
    row: 28
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 28
    column: 4
  end_location:
    row: 28
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 28
    column: 4
  end_location:
    row: 28
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 29
    column: 4
  end_location:
    row: 29
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 29
    column: 4
  end_location:
    row: 29
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 29
    column: 4
  end_location:
    row: 29
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 29
    column: 4
  end_location:
    row: 29
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 35
    column: 4
  end_location:
    row: 35
    column: 5
  fix:
    content: ""
    location:
      row: 35
      column: 4
    end_location:
      row: 36
      column: 4
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 37
    column: 4
  end_location:
    row: 37
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 37
    column: 4
  end_location:
    row: 37
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 39
    column: 4
  end_location:
    row: 39
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 39
    column: 4
  end_location:
    row: 39
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 39
    column: 4
  end_location:
    row: 39
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 41
    column: 4
  end_location:
    row: 41
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 41
    column: 4
  end_location:
    row: 41
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 41
    column: 4
  end_location:
    row: 41
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 41
    column: 4
  end_location:
    row: 41
    column: 5
  fix: ~
  parent: ~
- kind:
    MultiValueRepeatedKeyVariable: b
  location:
    row: 44
    column: 17
  end_location:
    row: 44
    column: 18
  fix:
    content: ""
    location:
      row: 44
      column: 15
    end_location:
      row: 44
      column: 21
  parent: ~

