src/pyflakes/snapshots/ruff__pyflakes__tests__F622_F622.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    TwoStarredExpressions: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 9
  fix: ~
  parent: ~

