src/pyflakes/snapshots/ruff__pyflakes__tests__F632_F632.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind: IsLiteral
  location:
    row: 1
    column: 3
  end_location:
    row: 1
    column: 13
  fix:
    patch:
      content: "x == \"abc\""
      location:
        row: 1
        column: 3
      end_location:
        row: 1
        column: 13
- kind: IsLiteral
  location:
    row: 4
    column: 3
  end_location:
    row: 4
    column: 15
  fix:
    patch:
      content: 123 != y
      location:
        row: 4
        column: 3
      end_location:
        row: 4
        column: 15
- kind: IsLiteral
  location:
    row: 7
    column: 3
  end_location:
    row: 7
    column: 17
  fix:
    patch:
      content: "\"123\" == x"
      location:
        row: 7
        column: 3
      end_location:
        row: 7
        column: 13

